<resources>
    <string name="facebook_app_id" translatable="false">2387695014825265</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2387695014825265</string>
    <string name="app_name">Brainmher</string>
    <string name="patient">Paciente</string>
    <string name="carer">Cuidador</string>
    <string name="cognitive">Cognitiva</string>
    <string name="motor">Motriz</string>
    <string name="list_patient">Lista de pacientes</string>
    <string name="health_professional">Profesional de la salud</string>
    <string name="required">Todos los campos son requeridos</string>
    <string name="email_required">Correo electrónico obligatorio</string>
    <string name="password_required">Contraseña obligatoria</string>
    <string name="auth_fail">Error en la autenticación</string>
    <string name="success_regis">Registrado correctamente</string>
    <string name="name_patient">Name patient</string>
    <string name="admin_id">ID</string>
    <string name="admin_place">Place</string>
    <string name="admin_profession">Profesión</string>
    <string name="my_care">Mi cuidado</string>
    <string name="test">Test</string>
    <string name="diary">Agenda</string>
    <string name="manage">Gestionar</string>
    <string name="emergency_contacts">Contactos</string>
    <string name="nearby_hospitals">Hospitales</string>
    <string name="phases_ea">Fases E.A.</string>
    <string name="general_information">Info. General</string>
    <string name="home">Inicio</string>
    <string name="list">Lista</string>
    <string name="emergency">Emergencias</string>
    <string name="info">Información</string>
    <string name="information_carer">Información.</string>
    <string name="exercise_carer">Ejercicios.</string>
    <string name="advice_carer">Avisos.</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="admin_user_name">Nombre de usuario</string>
    <string name="admin_pass">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrar</string>
    <string name="notification_hour">Hora alarma</string>
    <string name="hour_format">Hora de inicio: hh:mm</string>
    <string name="alarm_on">Encendida</string>
    <string name="alarm_off">Apagada</string>
    <string name="medicine_notification">Notificación Medicamento</string>
    <string name="medicine_name">Nombre del Medicamento</string>
    <string name="medicine_reminder">Recuerda que debes tomar o aplicar el medicamento.</string>
    <string name="every">Cada:</string>
    <string-array name="unit_time">
        <item>Horas</item>
        <item>Días</item>
        <item>Semanas</item>
        <item>Meses</item>
        <item>Minutos</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="datos_incorrectos">incorrect username or password</string>
    <string name="alert">Alert</string>
    <string name="message_delete">¿Estas seguro que quieres eliminar a %1$s ?</string>
    <string name="message_delete_memorizame">¿Estas seguro que quieres eliminar esta tarjeta?</string>
    <string name="delete">Delete</string>
    <string name="collection_administrators">Colección de administradores creada...</string>
    <string name="collection_healthcare_profeional">Colección de profesionales de la salud creada...</string>
    <string name="collection_carers">Colección de Cuidadores creada...</string>
    <string name="collection_patients">Colección de pacientes creada...</string>
    <string name="collection_terapies">Colección de terapias creada...</string>
    <string name="collection_notications">Colección de notificaciones creada...</string>
    <string name="creation_failed">Fallo la Creación</string>
    <string name="create_collections">Crear coleciones</string>
    <string name="create">Crear</string>
    <string name="lst_ps_name">Profesional de la salud</string>
    <string name="crud_ps">Nuevo P.S.</string>
    <string name="lastname_ps">Apellidos</string>
    <string name="name_ps">Nombres</string>
    <string name="documet_ps">Número de documento</string>
    <string name="profession_ps">Profesión</string>
    <string name="admin_ps_famale">Femenino</string>
    <string name="admin_ps_male">Masculino</string>
    <string name="date_birth_ps">Fecha de nacimiento</string>
    <string name="admin_ps_age">Age</string>
    <string name="admin_ps_telephone">Teléfono</string>
    <string name="admin_ps_city">Ciudad</string>
    <string name="admin_til_user">Usuario</string>
    <string name="admin_til_pass">Contraseña</string>
    <string name="admin_til_confin_pass">Confirmar contraseña</string>
    <string name="admin_til_confin_email">Correo electrónico</string>
    <string name="admin_til_workplace">Lugar de trabajo</string>
    <string name="admin_til_saveps">Guardar</string>
    <string name="number">Número</string>
    <string name="add_patient">Agregar Paciente</string>
    <string name="add_health_professional">Agregar Profesional de la Salud</string>
    <string name="add_image">Agregar imagen</string>
    <string name="first_name">Nombres</string>
    <string name="last_name">Apellidos</string>
    <string name="identification_type">Tipo de identificación</string>
    <string name="identification">Número de identificación</string>
    <string name="gender">Género</string>
    <string name="female">Femenino</string>
    <string name="male">Masculino</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="phone_number">Número telefónico</string>
    <string name="age">Edad</string>
    <string name="user_name">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="email">Correo electrónico</string>
    <string name="department">Departamento</string>
    <string name="native_city">Ciudad de nacimiento</string>
    <string name="actual_city">Ciudad actual</string>
    <string name="family_phone_number">Número telefónico familiar</string>
    <string name="address">Dirección</string>
    <string name="date_diagnostic">Fecha de diagnóstico</string>
    <string name="diagnostic">Diagnóstico</string>
    <string name="observations">Observaciones</string>
    <string name="emergency_number">Número de emergencia</string>
    <string name="citizenship_card">Cédula de ciudadanía</string>
    <string name="foreign_identity_card">Cédula extranjería</string>
    <string name="passport">Pasaporte</string>
    <string name="save">Guardar</string>
    <string name="update">Actualizar</string>
    <string name="cancel">Cancelar</string>
    <string name="was_saved_succesfully">Se guardó exitosamente</string>
    <string name="not_saved">No guardo</string>
    <string name="select_photo">Seleccione la Imagen</string>
    <string name="complete_field_please">Complete los campos, por favor!</string>
    <string name="add_family_question">Agregar Pregunta de Familia</string>
    <string name="add_home_question">Agregar Pregunta de Hogar</string>
    <string name="add_place_question">Agregar Pregunta de Lugar</string>
    <string name="add_pet_question">Agregar Pregunta de Mascota</string>
    <string name="add_Carer">Registrar Cuidador</string>
    <string name="menu_memorizame">Memorizame</string>
    <string name="menu_notifications">Notificaciones</string>
    <string name="menu_profile">Perfil</string>
    <string name="btn_logout">Cerrar sesión</string>
    <string name="add_event_carer">Agregar evento</string>
    <string name="view_event_carer">Ver eventos</string>
    <string name="cancel_event_carer">Cancelar evento</string>
    <string name="exit">Salir</string>
    <string name="select_option">Seleccione una opción</string>
    <string name="q1">¿Qué es?</string>
    <string name="q2">¿Qué síntomas de deterioro cognitivo se observan en las diferentes fases?</string>
    <string name="q3">¿Qué avances hay en el tratamiento de la enfermedad de Alzheimer?</string>
    <string name="q4">¿Qué otro déficit puede presentar una persona que padece Alzheimer?</string>
    <string name="q5">¿Se pueden tratar los síntomas de la enfermedad?</string>
    <string name="q6">Enterarse que un familiar padece Alzheimer y querer saber ¿Cómo actuar?</string>
    <string name="q7">¿Qué paso deben seguir los familiares después de que uno de sus integrantes es diagnosticado con Alzheimer?</string>
    <string name="q8">¿Cómo evitar accidentes o sustos?</string>
    <string name="q9">¿Qué es el síndrome del Cuidador?</string>
    <string name="qa1">Te puedes equivocar.</string>
    <string name="aa1">
        Concédete el derecho a cometer errores y a experimentar sentimientos negativos (todos somos humanos, así que no te mortifiques).
    </string>
    <string name="qa2">No te pares.</string>
    <string name="aa2">
        Busca toda la información que puedas a través de profesionales, asociaciones de familiares y conocidos. Así, podras resolver todas tus dudas
        y solucionar los problemas que se presentan.
    </string>
    <string name="qa3">No pierdas el sentido del humor.</string>
    <string name="aa3">
        Muchas veces recurrir al humor y reírse de las situaciones, te ayudará a desdramatizarlas y llevarlas mejor.
    </string>
    <string name="qa4">Déjate ayudar.</string>
    <string name="aa4">
        No rechaces la ayuda que te ofrecen familiares, vecinos o amigos. Es mejor aceptar ayuda y delegar algunas responsabilidades para mitigar
        la sobrecarga que supone ser el cuidador principal.
    </string>
    <string name="qa5">Anticipate.</string>
    <string name="aa5">
        Sé precavido, informate y anticípate en la medida de lo posible a problemas previsibles. Conoce cómo va a ir evolucionando la enfermedad,
        hará que sepas reaccionar ante los primeros síntomas de cambio.
    </string>
    <string name="qa6">Cuídate tú.</string>
    <string name="aa6">
        Si no cuidas tu propia salud y bienestar, no podrás cuidar adecuadamente a tu familiar enfermo. Intenta descansar y desconectar todo lo que puedas.
    </string>
    <string name="qa7">No pierdas la paciencia.</string>
    <string name="aa7">
        Cuando esperas una respuesta no seas impaciente ni te sientas frustrada porque no sea lo que esperas. Cuando las cosas no salen como tenías previsto,
        no te desesperes e intenta tomártelo con humor, sin perderlos nervios.
    </string>
    <string name="qa8">Desestrésate.</string>
    <string name="aa8">
        Para salir de situaciones agobiantes, distráete con algo sencillo y que te guste. Recupera hobbies (pintar, manualidades, lectura, deportes, tocar
        algun instrumento, etc..), realiza ejercicios de respiración y relajación, escucha musica, etc...
    </string>
    <string name="qa9">No te olvides de tus propias necesidades.</string>
    <string name="aa9">
        Intenta hacer un especio para ti cada día, para hacer algo que te guste o te haga sentir realizad@. Intenta reservar un rato para tu propia vida
        social, para no perder la relación con tus amig@s o entorno; sal a tomar un café, dar un paseo, hacer compras con aquellas personas con quién
        solias hacerlo antes.
    </string>
    <string name="qa10">Piensa diferente.</string>
    <string name="aa10">
        Pensar en el estrés hace que aveces nos estresemos más. Trata de pensar en otras cosas, ver la situación de otra manera (con humor, si es posible)
        y no pierdas la positividad.
    </string>
    <string name="win_messege">!Felicitaciones has ganado!.</string>
    <string name="win_cont_messege">¿Quieres volver a intentarlo?</string>
    <string name="reload">Recargar</string>
    <string name="volver_juego">Volver al menu</string>
    <string name="physical_exersice_finish">Felicitaciones lo has conseguido. </string>
</resources>