<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.carer.WarningCarerFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qa1"
                android:drawableTint="@color/colorPrimary"
                app:rippleColor="@color/colorAccent"
                style="@style/StylePrimaryColoredButtonInformation"/>

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/a1"
                android:layout_below="@+id/q1"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/aa1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/a1"
                android:text="@string/qa2"
                android:drawableTint="@color/colorPrimary"
                app:rippleColor="@color/colorAccent"
                style="@style/StylePrimaryColoredButtonInformation"/>
            <com.codesgood.views.JustifiedTextView
                android:id="@+id/a2"
                android:layout_below="@+id/q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:padding="8dp"
                android:visibility="gone"
                android:text="@string/aa2"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/a2"
                android:text="@string/qa3"
                android:drawableTint="@color/colorPrimary"
                app:rippleColor="@color/colorAccent"
                style="@style/StylePrimaryColoredButtonInformation"/>
            <com.codesgood.views.JustifiedTextView
                android:id="@+id/a3"
                android:layout_below="@+id/q3"
                android:textSize="18dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/aa3"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/q4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/a3"
                android:text="@string/qa4"
                android:drawableTint="@color/colorPrimary"
                app:rippleColor="@color/colorAccent"
                style="@style/StylePrimaryColoredButtonInformation"/>
            <com.codesgood.views.JustifiedTextView
                android:id="@+id/a4"
                android:layout_below="@+id/q4"
                android:textSize="18dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/aa4"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/q5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/a4"
                android:text="@string/qa5"
                android:drawableTint="@color/colorPrimary"
                app:rippleColor="@color/colorAccent"
                style="@style/StylePrimaryColoredButtonInformation"/>
            <com.codesgood.views.JustifiedTextView
                android:id="@+id/a5"
                android:layout_below="@+id/q5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:padding="8dp"
                android:visibility="gone"
                android:text="@string/aa5"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/q6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/a5"
                android:text="@string/qa6"
                android:drawableTint="@color/colorPrimary"
                app:rippleColor="@color/colorAccent"
                style="@style/StylePrimaryColoredButtonInformation"/>
            <com.codesgood.views.JustifiedTextView
                android:id="@+id/a6"
                android:layout_below="@+id/q6"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/aa6"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/q7"
                android:layout_below="@id/a6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qa7"
                android:drawableTint="@color/colorPrimary"
                app:rippleColor="@color/colorAccent"
                style="@style/StylePrimaryColoredButtonInformation"/>
            <com.codesgood.views.JustifiedTextView
                android:id="@+id/a7"
                android:layout_below="@+id/q7"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/aa7"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/q8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/a7"
                android:text="@string/qa8"
                android:drawableTint="@color/colorPrimary"
                app:rippleColor="@color/colorAccent"
                style="@style/StylePrimaryColoredButtonInformation"/>
            <com.codesgood.views.JustifiedTextView
                android:id="@+id/a8"
                android:layout_below="@+id/q8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:padding="8dp"
                android:visibility="gone"
                android:text="@string/aa8"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/q9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/a8"
                android:text="@string/qa9"
                android:drawableTint="@color/colorPrimary"
                app:rippleColor="@color/colorAccent"
                style="@style/StylePrimaryColoredButtonInformation"/>
            <com.codesgood.views.JustifiedTextView
                android:id="@+id/a9"
                android:layout_below="@+id/q9"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/aa9"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/q10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/a9"
                android:text="@string/qa10"
                android:drawableTint="@color/colorPrimary"
                app:rippleColor="@color/colorAccent"
                style="@style/StylePrimaryColoredButtonInformation"/>
            <com.codesgood.views.JustifiedTextView
                android:id="@+id/a10"
                android:layout_below="@+id/q10"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/aa10"/>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>